# LBL4

./: .gitignore  CMakeLists.txt  CMakePresets.json
controller/: CMakeLists.txt  Makefile  lb_app
controller/monitor/: CMakeLists.txt
controller/monitor/include/: monitor.h
controller/monitor/src/: monitor.cpp
controller/proto/: CMakeLists.txt  internal_stats.proto  service.proto
controller/user_ebpf/: CMakeLists.txt
controller/user_ebpf/ebpf_loader/: CMakeLists.txt
controller/user_ebpf/ebpf_loader/include/: ebpf_loader.hpp
controller/user_ebpf/ebpf_loader/src/: ebpf_loader.cpp
controller/user_ebpf/handle_maps/: CMakeLists.txt
controller/user_ebpf/handle_maps/src/: handle_maps.c
controller/user_ebpf/handlers/: CMakeLists.txt
controller/user_ebpf/handlers/include/: handlers.h
controller/user_ebpf/handlers/src/: handlers.cpp
controller/user_ebpf/io_epoll/: CMakeLists.txt
controller/user_ebpf/io_epoll/include/: io_epoll.h
controller/user_ebpf/io_epoll/src/: io_epoll.c  io_epoll.cpp
controller/user_ebpf/logger/: CMakeLists.txt
controller/user_ebpf/logger/include/: logger.hpp
controller/user_ebpf/logger/src/: logger.cpp
controller/user_ebpf/main/: CMakeLists.txt
controller/user_ebpf/main/src/: main.c  main.cpp
controller/user_ebpf/maps_manager/: CMakeLists.txt
controller/user_ebpf/maps_manager/include/: maps_manager.hpp
controller/user_ebpf/maps_manager/src/: maps_manager.cpp
controller/user_ebpf/protocol/: CMakeLists.txt
controller/user_ebpf/protocol/include/: protocol.h  protocol_decoder.h  protocol_encoder.h  protocol_types.h
controller/user_ebpf/protocol/src/: protocol.cpp  protocol_decoder.cpp  protocol_encoder.cpp  protocol_types.cpp
controller/user_ebpf/protocol_test/: CMakeLists.txt
controller/user_ebpf/protocol_test/src/: cleanup.sh  cleanup2.sh  protocol_client.cpp  protocol_server.cpp  run_backends.sh  run_backends2.sh  setup_backend.sh  stress_test.py
controller/user_ebpf/recovery/: CMakeLists.txt
controller/user_ebpf/session_manager/: CMakeLists.txt
controller/user_ebpf/session_manager/include/: session_manager.h
controller/user_ebpf/session_manager/src/: session_manager.cpp
controller/user_ebpf/stats/: CMakeLists.txt
controller/user_ebpf/stats/include/: stats_worker.hpp
controller/user_ebpf/stats/src/: stats_worker.cpp
model/backend/: main.py  requirements.txt  schemas.py  stats_service.py
model/backend/db/: connection.py  queries.py  test.py
model/kernel_ebpf/common/: common_structs.h  maps.h
model/kernel_ebpf/xdp_main/src/: balancer.bpf.c
model/routing_logic/: CMakeLists.txt
model/routing_logic/include/: maglev_builder.h  scorer.h
model/routing_logic/src/: maglev_builder.cpp  scorer.cpp
view/gui/: package-lock.json  package.json  tailwind.config.js
view/gui/src/: App.js  index.css
view/gui/src/components/: ServiceCard.js  Sidebar.js  StatCard.js
view/gui/src/context/: GlobalContext.js
view/gui/src/pages/: Dashboard.js  LiveTraffic.js  Logs.js  ServiceDetails.js
view/gui/src/services/: api.js
